# Minutare-inteliClinic

./: .dockerignore  .env.example  .env.vps.example  .gitignore  CLAUDE.md  README.md  correction_plan.md  docker-compose.yml  evaluation_final.md  prompt.md
GUIAS-DEV/: CLAUDE.md  IA em Gestão Completa de Clínicas Médicas.md  PROJECT_DISCOVERY_02.md  Plataforma IA Clínica_ Pesquisa e Arquitetura.md  Proposta_Produto_Plataforma_Clinica_IA.md  auditoria tecnica1.md  preparar projeto deploy prompt.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_add_pending_action.py  003_admin_domain.py  004_clinic_specialties.py  005_patient_crm_fields.py  006_rag_embedding_dim.py  007_add_rag_chunk_embedding_status.py  008_clinic_embedding_model_and_local_default.py  009_auth_and_jobs.py  010_google_calendar_token.py  011_rag_clinic_id.py  012_prompt_registry_prompt_type.py  013_rag_graphrag.py  014_add_services_and_policies.py  015_service_professional_links.py  016_professional_service_extensions.py
apps/api/app/: main.py
apps/api/app/ai_engine/: __init__.py  actions.py  context_manager.py  document_runtime_graph.py  guardrails.py  intent_router.py  ner_service.py  orchestrator.py  response_builder.py  response_composer.py  routing_decision.py  structured_lookup.py
apps/api/app/ai_engine/clients/: llm_client.py
apps/api/app/ai_engine/tools/: __init__.py  clinic_tools.py
apps/api/app/api/routes/: __init__.py  admin.py  admin_services.py  audit.py  auth.py  conversations.py  crm.py  dashboard.py  document_upload.py  extractions.py  google.py  handoff.py  health.py  patients.py  professionals.py  rag.py  schedules.py  telegram.py
apps/api/app/core/: auth.py  chunking.py  config.py  db.py  embedding.py  logging.py  pinecone_client.py  security.py
apps/api/app/integrations/google/: __init__.py  calendar_client.py  calendar_service.py  oauth.py
apps/api/app/integrations/telegram/: client.py  webhook_handler.py
apps/api/app/models/: __init__.py  admin.py  audit.py  auth.py  conversation.py  jobs.py  overrides.py  patient.py  policy.py  professional.py  rag.py  schedule.py  service.py
apps/api/app/observability/: __init__.py  langsmith.py
apps/api/app/repositories/: admin_repository.py  audit_repository.py  conversation_repository.py  patient_repository.py  professional_repository.py  rag_repository.py  schedule_repository.py  service_repository.py
apps/api/app/schemas/: admin.py  audit.py  conversation.py  document.py  patient.py  pipeline.py  rag.py  schedule.py  telegram.py
apps/api/app/services/: admin_service.py  audit_service.py  conversation_service.py  crm_service.py  document_upload.py  extraction_approval.py  extraction_service.py  handoff_service.py  patient_service.py  pinecone_structured_sync.py  rag_service.py  reconciliation_service.py  reranker_service.py  schedule_service.py  telegram_service.py
apps/api/app/workers/: __init__.py  followup_worker.py
apps/api/scripts/: cleanup_history.py
apps/api/tests/: conftest.py  test_actions.py  test_admin.py  test_chunking.py  test_document_upload.py  test_e2e_document_upload.py  test_extraction_service.py  test_guardrails.py  test_intent_router.py  test_intent_router_gliner.py  test_orchestrator.py  test_pinecone_client.py  test_rag.py  test_webhook.py
config/examples/: clinic.example.yaml
docs/: API_MAP.md  DB_SCHEMA.md  FRONTEND_RUNBOOK.md  PRD_MVP.md  RUNBOOK.md  TELEGRAM_SETUP.md
docs/architecture/: RUNTIME.md  core-vs-clinic.md
docs/clinic-onboarding/: new-clinic.md
docs/deployment/: ENV_REFERENCE.md  VPS_DEPLOY_CHECKLIST.md  dedicated-deploy.md
frontend/: .dockerignore  Dockerfile  next.config.ts
infra/docker/: .env.example  docker-compose.yml
remake/: design.md  opensource-research.md  prompt-claude-spec-driven-admin-rebuild.md  requirements.md  task.md
scripts/: evaluate_rag.py  ingest_docs.py  register_telegram_webhook.py  run_full_evaluation.py  seed_data.py  seed_services.py
src/inteliclinic/: __init__.py
(+139 files in other folders)
